# jarvis

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bootstrap.sh  config.yaml  docker-compose.yml  pyproject.toml
jarvis/: __init__.py  __main__.py
jarvis/agents/: __init__.py  base_agent.py  registry.py
jarvis/core/: __init__.py  capabilities.py  config.py  context.py  events.py  kernel.py  soul.py  state.py
jarvis/interfaces/: __init__.py  popup.py  reactor.py  service.py
jarvis/interfaces/cli/: __init__.py  app.py
jarvis/interfaces/daemon/: __init__.py  runner.py
jarvis/interfaces/voice_app/: __init__.py  app.py
jarvis/interfaces/web/: __init__.py  server.py
jarvis/interfaces/web/static/: index.html
jarvis/memory/: __init__.py  db.py  store.py
jarvis/providers/: __init__.py  claude_code.py  claude_sdk.py  keychain.py  router.py  vision.py
jarvis/skills/: __init__.py  base.py  builtins.py  claude_bridge.py  computer.py  gui.py  loader.py  mcp_bridge.py  memory_skills.py  openclaw_extra.py  project_bridge.py  system_ctl.py  trading.py  web_apis.py  web_apis2.py
jarvis/voice/: __init__.py  clap.py  stt.py  stt_vosk.py  tts.py
tests/: smoke.py
