[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-assistant"
version = "0.1.0"
description = "Jarvis — a portable, multi-provider, multi-interface autonomous AI assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1"]
daemon = ["apscheduler>=3.10"]
voice = ["vosk>=0.3.45", "faster-whisper>=1.0", "edge-tts>=7.0", "piper-tts>=1.2", "sounddevice>=0.4", "numpy>=1.26"]
cloud = ["anthropic>=0.39", "openai>=1.40"]
all = [
    "fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1",
    "apscheduler>=3.10",
    "faster-whisper>=1.0", "edge-tts>=7.0", "piper-tts>=1.2", "sounddevice>=0.4", "numpy>=1.26",
    "anthropic>=0.39", "openai>=1.40",
]

[project.scripts]
jarvis = "jarvis.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]
